@@ -112,6 +112,7 @@ use strict;
 use vars qw($VERSION @ISA @EXPORT @EXPORT_OK %EXIT_STATUS %INTERVAL
             %DESTROYED);
 
+use POSIX;
 use IO::Handle;
 require Exporter;
 
@@ -258,6 +259,7 @@ sub start {
       if(ref($func) eq "CODE") {
         $func->(@params); exit 0;            # Start perl subroutine
       } else {
+          POSIX::setsid();
           exec $func, @params;       # Start shell process
           exit 0;                    # In case something goes wrong
       }
@@ -339,16 +341,21 @@ sub kill {
   my $sig  = shift;
 
   # If no signal specified => SIGTERM-Signal
-  $sig = "SIGTERM" unless defined $sig;
+  $sig = POSIX::SIGTERM() unless defined $sig;
 
   # Process initialized at all?
   return 0 if !defined $self->{'pid'};
 
+  # kill process group instead of process to make sure that shell
+  # processes containing shell characters, which get launched via
+  # "sh -c" are killed along with their launching shells.
+  $sig = -$sig;
+
   # Send signal
   if(kill($sig, $self->{'pid'})) {
-      $self->dprt("KILL($self->{'pid'}) OK");
+      $self->dprt("KILL($sig, $self->{'pid'}) OK");
   } else {
-      $self->dprt("KILL($self->{'pid'}) failed");
+      $self->dprt("KILL($sig, $self->{'pid'}) failed");
       return 0;
   }
 
@@ -747,6 +754,28 @@ signal really terminates a process. Processes can have signal
 handlers defined that avoid the shutdown.
 If in doubt, whether a process still exists, check it
 repeatedly with the I<poll> routine after sending the signal.
+
+=head1 Shell Processes
+
+If you pass a shell program to Proc::Simple, it'll use C<exec()> to 
+launch it. As noted in Perl's C<exec()> manpage, simple commands for
+the one-argument version of C<exec()> will be passed to 
+C<execvp()> directly, while commands containing characters
+like C<;> or C<*> will be passed to a shell to make sure those get
+the shell expansion treatment.
+
+This has the interesting side effect that if you launch something like
+
+    $p->start("./womper *");
+
+then you'll see two processes in your process list:
+
+    $ ps auxww | grep womper
+    mschilli  9126 11:21 0:00 sh -c ./womper *
+    mschilli  9127 11:21 0:00 /usr/local/bin/perl -w ./womper ...
+
+and Proc::Simple's C<kill()> method will only kill the first one
+(pid 9126).
 
 =head1 Contributors
 
